# oop_labs

./: .gitignore
lab0/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.h  Reader.cpp  Reader.h  WordCounter.cpp  WordCounter.h  main.cpp
lab1/: CMakeLists.txt  bitArray.cpp  bitArray.h  lab1_tests.cpp
lab2/: CMakeLists.txt
lab2/include/: BaseUniverse.h  Game.h  IRule.h  LifeLikeRule.h  ToroidalUniverse.h
lab2/src/: BaseUniverse.cpp  Game.cpp  LifeLikeRule.cpp  ToroidalUniverse.cpp  main.cpp
lab4/: customEventLog.txt  intLog.txt  lab4.cpp  stringLog.txt
